tests/snapshots/cli_scaffold__scaffold_snapshots__editorial_shape_scaffold_snapshot.snap
---
source: tests/cli_scaffold.rs
expression: yaml
---
# Generated by `shapes create shape` (template: editorial).
# Replace each `TODO:` with real content. Uncomment and fill in the stub
# sections (parents/children/constraints/realization) you need; delete the
# ones you don't. Run `shapes validate` when ready.

id: 1
name: "Chapter1"
description: |
    TODO: full paragraph — what this is, who uses it, what it does, why it exists
status: proposed
intent:
  kind: "chapter"
  summary: "TODO: one-line summary of this shape"
  source: "human"
  themes: |
    TODO: Central themes or ideas this piece explores
  target_audience: |
    TODO: Who this is written for
  tone: |
    TODO: Voice and emotional register
  # narrative_arc: "TODO: How the piece moves from beginning to end"

# Suggested shape kinds for this template:
#   work — A complete book, article, or series
#   chapter — A chapter or major section
#   section — A subsection or scene
#   character — A character or persona
#   arc — A narrative or thematic arc
#   theme — A recurring idea

# Parent shapes (this shape is a child of):
# parents:
#   - id: TODO  # parent shape ID
#     role: component

# Child shapes (this shape contains):
# children:
#   - shape: TODO  # child shape ID
#     role: component

# Constraints that apply to this shape (by ID):
# constraints:
#   - TODO  # constraint ID

# Where this is realized in the codebase:
# realization:
#   - bindings:
#       - scheme: path
#         value: TODO  # path/to/file.rs
#         metadata:
#           summary: TODO — what this file does for this node
#     role: primary
