tests/snapshots/cli_scaffold__scaffold_snapshots__research_shape_scaffold_snapshot.snap
---
source: tests/cli_scaffold.rs
expression: yaml
---
# Generated by `shapes create shape` (template: research).
# Replace each `TODO:` with real content. Uncomment and fill in the stub
# sections (parents/children/constraints/realization) you need; delete the
# ones you don't. Run `shapes validate` when ready.

id: 1
name: "DecayExperiment"
description: |
    TODO: full paragraph — what this is, who uses it, what it does, why it exists
status: proposed
intent:
  kind: "experiment"
  summary: "TODO: one-line summary of this shape"
  source: "human"
  hypotheses: |
    TODO: What you believe is true and want to test
  success_criteria: |
    TODO: Measurable conditions that confirm or refute the hypothesis
  methodology: |
    TODO: How the experiment or analysis is performed
  # variables: "TODO: Independent, dependent, and controlled variables"
  # prior_work: "TODO: Related research and how this builds on or differs from it"

# Suggested shape kinds for this template:
#   experiment — A single experimental run or protocol
#   dataset — A corpus of data used as input or evidence
#   analysis — A processing or statistical pipeline
#   finding — A confirmed or refuted result
#   hypothesis — A testable claim

# Parent shapes (this shape is a child of):
# parents:
#   - id: TODO  # parent shape ID
#     role: component

# Child shapes (this shape contains):
# children:
#   - shape: TODO  # child shape ID
#     role: component

# Constraints that apply to this shape (by ID):
# constraints:
#   - TODO  # constraint ID

# Where this is realized in the codebase:
# realization:
#   - bindings:
#       - scheme: path
#         value: TODO  # path/to/file.rs
#         metadata:
#           summary: TODO — what this file does for this node
#     role: primary
