tests/snapshots/cli_scaffold__scaffold_snapshots__software_constraint_scaffold_snapshot.snap
---
source: tests/cli_scaffold.rs
expression: yaml
---
# Generated by `shapes create constraint` (template: software).
# Replace each `TODO:` with real content. Uncomment and fill in the stub
# sections (parents/children/constraints/realization) you need; delete the
# ones you don't. Run `shapes validate` when ready.

id: 1
name: "NoUnsafeBlocks"
description: |
    TODO: full paragraph — what this is, who uses it, what it does, why it exists
kind: "invariant"
rule: |
    TODO: specific, falsifiable rule — phrased so it can be checked by reading code
enforcement: manual
status: proposed
intent:
  kind: "invariant"
  summary: "TODO: one-line summary of this constraint"
  source: "human"
  rationale: |
    TODO: Why this rule exists — the incident or decision that created it
  # impact_if_violated: "TODO: What breaks if this rule is violated, and how badly"
  # exceptions: "TODO: Known cases where this rule does not apply"
  # verification_method: "TODO: How compliance is checked (test, review, lint, audit)"

# Suggested constraint kinds for this template:
#   invariant — Must always hold — violating it is a bug
#   requirement — Functional requirement the system must meet
#   boundary — Hard architectural boundary
#   guideline — Recommended practice; deviations need justification
#   limit — A quantitative cap (rate, size, count, latency)
#   policy — Organizational or compliance rule

# Parent constraints (this constraint is a child of):
# parents:
#   - id: TODO  # parent constraint ID
#     role: component

# Child constraints (this constraint contains):
# children:
#   - constraint: TODO  # child constraint ID
#     role: component

# Where this is realized in the codebase:
# realization:
#   - bindings:
#       - scheme: path
#         value: TODO  # path/to/file.rs
#         metadata:
#           summary: TODO — what this file does for this node
#     role: primary

# Evidence that this constraint holds (tests, reviews, audits):
# evidence:
#   - id: TODO  # short identifier, e.g. unit-test-suite
#     type: test
#     bindings:
#       - scheme: path
#         value: TODO  # tests/path.rs
#         metadata: {}
