tests/snapshots/cli_scaffold__scaffold_snapshots__software_shape_scaffold_snapshot.snap
---
source: tests/cli_scaffold.rs
expression: yaml
---
# Generated by `shapes create shape` (profile: 1 — software starter profile).
# Replace each `TODO:` with real content. Uncomment and fill in the stub
# sections (parents/children/constraints/realization) you need; delete the
# ones you don't. Run `shapes validate` when ready.

id: 1
name: "AuthService"
description: |
    TODO: full paragraph — what this is, who uses it, what it does, why it exists
profile: 1
status: proposed
intent:
  kind: "service"
  summary: "TODO: one-line summary of this shape"
  source: "human"
  goals: |
    TODO: What this shape must achieve — concrete, observable outcomes
  rationale: |
    TODO: Why this approach was chosen over alternatives
  # non_goals: "TODO: What is explicitly out of scope"
  # requirements: "TODO: Specific functional requirements this shape must meet"

# Suggested shape kinds from profile:
#   system — Top-level system — the project as a whole
#   service — A long-running service or daemon
#   feature — A user-facing capability
#   module — A cohesive code module
#   interface — An API, contract, or boundary
#   data-flow — How data moves through the system
#   pattern — A reusable design pattern

# Parent shapes (this shape is a child of):
# parents:
#   - id: TODO  # parent shape ID
#     role: component

# Child shapes (this shape contains):
# children:
#   - shape: TODO  # child shape ID
#     role: component

# Constraints that apply to this shape (by ID):
# constraints:
#   - TODO  # constraint ID

# Where this is realized in the codebase:
# realization:
#   - bindings:
#       - scheme: path
#         value: TODO  # path/to/file.rs
#         metadata:
#           summary: TODO — what this file does for this node
#     role: primary
